2014-07-03  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/build-elf32_windows.patch: Use i686-pc-mingw32 by
	default.

2014-07-03  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-versions.sh: Bump Linux branch to arc-3.15.

2014-07-02  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Replace hardcoded triplet with variable.

2014-07-02  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Pass -f when creating symlinks.

2014-07-01  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* dejabase/baseboards/arc-sim-nsimdrv.exp: Add atomic options.

2014-06-24  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/setup-base.nsi: Add web links to releases and
	wiki.

2014-06-24  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Switch to arc-snps-linux-uclibc target triplet.

2014-06-23  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/setup-base.nsi: Add link to documentation folder.

2014-05-28  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-uclibc.sh: Adjust build procedure to create toolchain that
	can be used as an external toolchain in Buildroot.
	* rel-rpaths.sh: Do not patch libc.so, since there are no hardcoded
	paths in it anymore.

2014-05-11  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* tag-release.sh: Use a separate tagname for GDB.

2014-05-11  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* README.md: Updated for unified binutils-gdb repository.
	* arc-clone-all.sh: Likewise.
	* symlink-all.sh: Avoid sim and gdb directories in binutils
	trampling on gdb versions.

2014-05-06  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* README.md: Update prerequisites and unify formatting.

2014-05-05  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/build-installer.sh: New file.

2014-05-05  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* windows-installer/setub-base.nsi: Rename to setup-base.nsi.
