@@ -77,7 +77,7 @@
 # ISA_CPU
 
 #     For use with the --with-cpu flag to specify the ISA. Can be arc700 or
-#     HS.
+#     archs.
 
 # CONFIG_FLAGS
 
